# aoc2021

./: Cargo.toml  README.md  build.rs
src/: day1.rs  day2.rs  day21.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs  template.rs
src/day24/: alu.rs  alu_generated.rs  alu_generated_unoptimized.rs  modified_gen.rs  monad.rs  optimizedop.rs  primitives.rs  rustgen.rs
