[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Zoey Mertes <zmertes@zmertes.net>"]
edition = "2021"

[dependencies]
rayon = "1.5.1"
nom = "7.1.0"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
lazy_static = "1.4.0"
petgraph = "0.6.0"
itertools = "0.10.1"

[profile.release]
panic = 'abort'
